tests/typing/bad/testfile-affect-3.jl
struct NotMutable a end
x = NotMutable(2)
x.a = 3
